--- a/src/styles.scss
+++ b/src/styles.scss
@@ -127,7 +127,27 @@ button.btn_industries {
     box-shadow: $shadow;
   }
   &:focus {
-    box-shadow: none;
+    box-shadow: $shadow;
+  }
+}
+.gallery_fade > div {
+  position: relative;
+  overflow: hidden;
+  &:hover::before {
+    opacity: 0.4;
+    width: 100%;
+    bottom: 0;
+  }
+  &:before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 0;
+    height: 100%;
+    background-color: #000;
+    opacity: 0;
+    transition: 0.4s;
+    bottom: 0;
   }
 }
 // ---------- MEDIA QURIES
